objects/Blood_request__c.object
<CustomObject>
    <description>case study object1</description>
    <label>Blood request</label>
    <nameField>
        <label>Blood Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blood requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <description>case study</description>
        <inlineHelpText>Please Enter age</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>case study</description>
        <inlineHelpText>Please select your state</inlineHelpText>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>case study</description>
        <inlineHelpText>Please select one of the district</inlineHelpText>
        <label>District</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Madurai</fullName>
                </value>
                <value>
                    <fullName>Salem</fullName>
                </value>
                <value>
                    <fullName>Dharmapuri</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
                <value>
                    <fullName>Tuticorin</fullName>
                </value>
                <value>
                    <fullName>Alappuzha</fullName>
                </value>
                <value>
                    <fullName>Ernakulam</fullName>
                </value>
                <value>
                    <fullName>Kannur</fullName>
                </value>
                <value>
                    <fullName>Idukki</fullName>
                </value>
                <value>
                    <fullName>Bagalkot</fullName>
                </value>
                <value>
                    <fullName>Bengaluru Urban</fullName>
                </value>
                <value>
                    <fullName>Bengaluru Rural</fullName>
                </value>
                <value>
                    <fullName>Belagavi</fullName>
                </value>
                <value>
                    <fullName>Srikakulam</fullName>
                </value>
                <value>
                    <fullName>Vizianagaram</fullName>
                </value>
                <value>
                    <fullName>Visakhapatnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <description>case study</description>
        <inlineHelpText>Please select any of the blood group</inlineHelpText>
        <label>Blood Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A positive</fullName>
                </value>
                <value>
                    <fullName>A negative</fullName>
                </value>
                <value>
                    <fullName>B positive</fullName>
                </value>
                <value>
                    <fullName>B negative</fullName>
                </value>
                <value>
                    <fullName>AB positive</fullName>
                </value>
                <value>
                    <fullName>AB negative</fullName>
                </value>
                <value>
                    <fullName>O positive</fullName>
                </value>
                <value>
                    <fullName>O negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_units__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter no of units</inlineHelpText>
        <label>No of units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attender_Name__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter attender name</inlineHelpText>
        <label>Attender Name</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter the hospital name</inlineHelpText>
        <label>Hospital Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attender_Email__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter Email address of attender</inlineHelpText>
        <label>Attender Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Blood_request_ID__c</fullName>
        <description>case study</description>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Blood request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Hospital_Address__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter hospital address</inlineHelpText>
        <label>Hospital Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attender_Contact_No__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter Attender Contact No</inlineHelpText>
        <label>Attender Contact No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nature_of_Treatment__c</fullName>
        <description>case study</description>
        <inlineHelpText>Please select the nature of treatment taken</inlineHelpText>
        <label>Nature of Treatment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>general medicine</fullName>
                </value>
                <value>
                    <fullName>siddha</fullName>
                </value>
                <value>
                    <fullName>ayurveda</fullName>
                </value>
                <value>
                    <fullName>homeopathy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfBloodCoOrdinaters__c</fullName>
        <label>NoOfBloodCoOrdinaters</label>
        <summaryForeignKey>blood_coor__c.Blood_request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <validationRules>
        <fullName>Age_rule</fullName>
        <active>true</active>
        <description>case study</description>
        <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Below 18 age could not donate blood</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>attender_contact_no_rule</fullName>
        <active>true</active>
        <description>case study</description>
        <errorConditionFormula>AND((ISBLANK( Attender_Name__c )),NOT(ISBLANK( Attender_Contact_No__c )))|| AND(NOT(ISBLANK( Attender_Name__c )),ISBLANK( Attender_Contact_No__c ))</errorConditionFormula>
        <errorMessage>Please Enter attender contact no and name</errorMessage>
    </validationRules>
</CustomObject>